vehicle/tests/golden/error/typing/indexOutOfBoundsConcrete/indexOutOfBoundsConcrete.vcl
outOfBounds : Tensor Rat [1] -> Rat
outOfBounds x = x ! 1
